# pypec

./: .gitignore  INSTALL.txt  MANIFEST.in  Pipfile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: CodeDoc.html  Tutorial.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: Analyse_PEC.html  Parallel_Process.html  index.html  iph_functions.html
docs/_modules/pec/: Analyse_PEC.html  Parallel_Process.html  iph_functions.html
docs/_modules/pypec/: Analyse_PEC.html  Parallel_Process.html  iph_functions.html
docs/_sources/: index.rst.txt
docs/_sources/api/: codedoc.rst.txt
docs/_sources/getting_started/: introduction.rst.txt
docs/_sources/introduction/: index.rst.txt  introduction.rst.txt
docs/_sources/releases/: 0.1.0-notes.rst.txt  index.rst.txt  template.rst.txt
docs/_sources/tutorials/: index.rst.txt
docs/api/: codedoc.html  index.html
docs/autodoc/: codedoc.html  index.html
docs/bibliography/: bibliography.html  index.html
docs/getting_started/: index.html  introduction.html
docs/introduction/: index.html  introduction.html
docs/releases/: 0.1.0-changelog.html  0.1.0-notes.html  0.1.1-notes.html  index.html  template.html
docs/scipy-sphinx-theme/: README.html  index.html  test_autodoc.html  test_autodoc_2.html  test_autodoc_3.html  test_autodoc_4.html  test_optimize.html
docs/source/: CodeDoc.rst  Tutorial.rst  conf.py  index.rst
docs/tutorials/: index.html  tutorial.html
docs/user_guide/: index.html  tutorial.html
pec/: Analyse_PEC.py  Parallel_Process.py  __main__.py  iph_functions.py  plotstyle.py  version.py
pypec/: Analyse_PEC.py  DotViewer.py  __init__.py  __main__.py  version.py
sphinx/source/: conf.py  index.rst
sphinx/source/api/: index.rst
(+17 files in other folders)
