[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pypec"
version = "0.1.1"
authors = [{name = "Milan Skocic", email = "milan.skocic@icloud.com"}]
description = "pypec: photoelectrochemistry for Python."
readme = "README.rst"
requires-python = ">=3.6"
dependencies = ["numpy>=1.17", "scipy>=1.5", "matplotlib>=3.0.0"]
license = {text = "MIT"}
classifiers=["Development Status :: 5 - Production/Stable",
            "Intended Audience :: Science/Research",
            "Topic :: Scientific/Engineering",
            "License :: OSI Approved :: MIT"]

[project.urls]
Documentation = "https://milanskocic.github.io/pypec/index.html"
Source = "https://github.com/MilanSkocic/pypec"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
pypec = ["icon.png"]
